part-2 of assignment-2 completed.

--- a/assignment-2/src/makefile
+++ b/assignment-2/src/makefile
@@ -6,6 +6,14 @@ part1.out: part1_searcher.cpp
 run-part1: part1.out
 	./part1.out file.txt NGTNIJGK 0 67108863
 
+build-part2: part2.out
+
+part2.out: part2_partioner.cpp
+	g++ -g part2_partioner.cpp -o part2_partioner.out
+
+run-part2: part1.out part2_partioner.out
+	./part2_partioner.out file.txt NGTNIJGK 0 67108863 8388608
+
 clean-part1:
 	rm part1.out
 
