--- a/assignment-2/src/makefile
+++ b/assignment-2/src/makefile
@@ -4,7 +4,7 @@ part1.out: part1_searcher.cpp
 	g++ -g part1_searcher.cpp -o part1.out
 
 run-part1: part1.out
-	./part1.out file.txt NGTNIJGK 0 67108863
+	./part1.out file.txt AOD 0 67108863
 
 build-part2: part2.out
 
@@ -12,7 +12,7 @@ part2.out: part2_partioner.cpp
 	g++ -g part2_partioner.cpp -o part2_partioner.out
 
 run-part2: part1.out part2_partioner.out
-	./part2_partioner.out file.txt NGTNIJGK 0 67108863 8388608
+	./part2_partioner.out file.txt AOD 0 67108863 8388608
 
 build-part3: part3_partioner.cpp part3_searcher.cpp
 	g++ -g part3_searcher.cpp -o part3_searcher.out
